# SmartEcoPlantSystem

./: .gitignore  CMakeLists.txt  README.md  mycode  mycode.cxx
include/: moistureSensor.h  tempSensor.h  ventilatingSystem.h  ventilatingSystemThread.h  wateringSystem.h  wateringSystemThread.h
src/: Main.cpp  mcp3008Spi.cpp  moistureSensor.cpp  tempSensor.cpp  ventilatingSystem.cpp  ventilatingSystemThread.cpp  wateringSystem.cpp  wateringSystemThread.cpp
test/blinkingTest/: CMakeLists.txt  README.md
test/moistureSensorTest/: CMakeLists.txt
test/soilMoistureSensor/: a.out  mycode.cxx
tests/CarbonDioxideSensorTest/: CMakeCache.txt  CMakeLists.txt  Co2Sen.geany  Makefile  announcement.md  cmake_install.cmake  readme.txt
tests/CarbonDioxideSensorTest/include/: co2tf.h  co2tf.h.gch
tests/CarbonDioxideSensorTest/src/: CMakeLists.txt  Makefile  cmake_install.cmake  co2tr.cpp  main.cpp
tests/SerialPortTest/: CMakeCache.txt  CMakeLists.txt  Makefile  Serial.geany  cmake_install.cmake  main  readme.txt  serialtest.cxx
tests/Temperature&HumiditySensorTest/: Makefile
tests/blinkingTest/: CMakeCache.txt  CMakeLists.txt  README.md  blinkingTest.cxx
tests/cmaketest/: readme.txt
tests/cmaketest/mulitisource/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.geany
tests/cmaketest/mulitisource/include/: testFunc.h.gch
tests/cmaketest/mulitisource/src/: main.cxx
tests/cmaketest/simexample/: demo.geany
tests/cmaketest/simexample/include/: testFunc  testFunc.h.gch  testFunc1.h.gch
tests/cmaketest/simexample/src/: main.cxx  testFunc.cxx  testFunc1.cxx
tests/co2_arduino/co2sensor/: co2sensor.ino
tests/co2_datasheet/: datasheet.md
tests/filter algorithem/: filter.h  filter.h.gch  kalman.cpp  simple filters.cpp
tests/moistureSensorTest/: CMakeLists.txt  README.md  moistureSensorTest.cpp  moistureSensorTest.cxx  readme.txt
tests/threadingTest/: CMakeLists.txt  README.md  blinkingConst.cpp  blinkingConst.h  blinkingVar.cpp  blinkingVar.h  threadingTest.cpp
